# libsesstype

./: .clang_config  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Common.mk  LICENSE.md  Makefile  README.md  Rules.mk  add_8h_source.html  allreduce_8h_source.html  annotated.html  classes.html  classsesstype_1_1BlockNode-members.html  classsesstype_1_1BlockNode.html  classsesstype_1_1BlockNodeTmpl-members.html  classsesstype_1_1BlockNodeTmpl.html  classsesstype_1_1BlockNodeTmpl__inherit__graph.map  classsesstype_1_1BlockNodeTmpl__inherit__graph.md5  classsesstype_1_1BlockNode__coll__graph.map  classsesstype_1_1BlockNode__coll__graph.md5  classsesstype_1_1BlockNode__inherit__graph.map  classsesstype_1_1BlockNode__inherit__graph.md5  classsesstype_1_1ChoiceNode-members.html  classsesstype_1_1ChoiceNode.html  classsesstype_1_1ChoiceNodeTmpl-members.html  classsesstype_1_1ChoiceNodeTmpl.html  classsesstype_1_1ChoiceNodeTmpl__coll__graph.md5  classsesstype_1_1ChoiceNodeTmpl__inherit__graph.map  classsesstype_1_1ChoiceNode__coll__graph.map  classsesstype_1_1ChoiceNode__coll__graph.md5  classsesstype_1_1ChoiceNode__inherit__graph.md5  classsesstype_1_1ContinueNode-members.html  classsesstype_1_1ContinueNode.html  classsesstype_1_1ContinueNodeTmpl-members.html  classsesstype_1_1ContinueNodeTmpl.html  classsesstype_1_1ContinueNode__coll__graph.map  classsesstype_1_1ContinueNode__coll__graph.md5  classsesstype_1_1ContinueNode__inherit__graph.map  (+883 more)
config/: publish-doxygen  travisci_rsa.enc
debian/: .gitignore  README  changelog  control  copyright  libsesstype.install
docs/: Doxyfile.in
include/: st_expr.h  st_node.h  st_normalise.h
include/sesstype/: constant.h  expr.h  import.h  message.h  module.h  msg.h  node.h  parameterised.h  protocol.h  role.h  role_grp.h  session.h  sesstype.h.in  st_expr.h  st_node.h  st_node_print.h  st_normalise.h  st_role.h  st_role_group.h  util.h  utils.h
include/sesstype/node/: block.h  choice.h  continue.h  interaction.h  interruptible.h  nested.h  par.h  recur.h
include/sesstype/parameterised/: cond.h  const.h  constant.h  expr.h  exprs.h  message.h  module.h  msg.h  node.h  nodes.h  protocol.h  role.h  role_grp.h  session.h  util.h
include/sesstype/parameterised/expr/: add.h  div.h  log.h  mod.h  mul.h  rng.h  seq.h  shl.h  shr.h  sub.h  val.h  var.h
include/sesstype/parameterised/node/: allreduce.h  block.h  choice.h  continue.h  for.h  if.h  interaction.h  interruptible.h  nested.h  oneof.h  par.h  recur.h
include/sesstype/parameterised/util/: empty_visitor.h  empty_visitor.hpp  expr_apply.h  expr_eval.h  expr_invert.h  expr_print.h  expr_visitor.h  node_visitor.h  print.h  project.h  projection.h  role_visitor.h  simplify_expr.h
include/sesstype/util/: clonable.h  empty_visitor.h  empty_visitor.hpp  node_visitor.h  print.h  project.h  projection.h  role_visitor.h  visitor_tmpl.h
include/sesstype/utils/: expr.h  node.h  role.h
search/: all_0.js  all_10.js  all_12.js  all_2.js  all_3.js  all_5.js  all_61.js  all_62.js  all_63.js  all_65.js  all_66.js  all_68.js  all_69.js  all_6c.js  all_6d.js  all_6e.js  all_6f.js  all_70.js  all_72.js  all_73.js  all_74.js  all_75.js  all_76.js  all_7e.js  all_9.js  all_a.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_4.js  classes_6.js  classes_61.js  classes_62.js  classes_63.js  classes_64.js  classes_65.js  classes_66.js  classes_69.js  (+54 more)
src/: CMakeLists.txt  Makefile  block_node.cc  choice_node.cc  constant.cc  constant_api.cc  continue_node.cc  expr.cc  expr_api.cc  expr_visitor.cc  import.cc  interaction_node.cc  interruptible_node.cc  message.cc  module.cc  msg.cc  nested_node.cc  node.cc  node_api.cc  node_visitor.cc  par_node.cc  protocol.cc  protocol_api.cc  recur_node.cc  role.cc  role_api.cc  role_grp.cc  role_grp_api.cc  session.cc  st_expr.c  st_node.c  st_node_compare.c  st_node_print.c  st_normalise.c  st_role.c  st_role_group.c
src/api/: block_node.cc  choice_node.cc  continue_node.cc  import.cc  interaction_node.cc  interruptible_node.cc  module.cc  msg.cc  nested_node.cc  node.cc  par_node.cc  print.cc  protocol.cc  recur_node.cc  role.cc  session.cc
src/api/parameterised/: constant.cc  expr.cc  module.cc  node.cc  protocol.cc  role_grp.cc
src/parameterised/: allreduce_node.cc  constant.cc  expr.cc  for_node.cc  if_node.cc  interaction_node.cc  message.cc  module.cc  msg.cc  node.cc  oneof_node.cc  protocol.cc  role.cc  role_grp.cc  session.cc
src/parameterised/api/: allreduce_node.cc  const.cc  expr.cc  for_node.cc  if_node.cc  interaction_node.cc  node.cc  oneof_node.cc  print.cc  role.cc  role_grp.cc  session.cc  util.cc
src/parameterised/util/: expr_visitor.cc  node_visitor.cc  print.cc  projection.cc  role_visitor.cc  simplify.cc
src/util/: node_visitor.cc  print.cc  projection.cc  role_visitor.cc
src/utils/: expr_visitor.cc  node_visitor.cc  print.cc  projection.cc  role_visitor.cc
src/utils/parameterised/: print.cc  projection.cc  simplify.cc
tests/: CMakeLists.txt  api.cc  constant.cc  expr.cc  message.cc  module.cc  node.cc  projection.cc  protocol.cc  role.cc
